# llm-decoding

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile.local.example  README.md  config.example.toml  config.local.example.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
decoding_sandbox/backends/: __init__.py  hf.py  llamacpp.py  llamacpp_py.py  openai_compat.py  remote.py
decoding_sandbox/backends/openai_compat/: __init__.py  _fireworks_ext.py  _http.py  _parsing.py  _streaming.py  _streaming_echo.py  _tokenizer.py  backend.py
decoding_sandbox/cli/: __init__.py  __main__.py  _shared.py  app.py  manual_tui.py  render.py  session.py  timing.py
decoding_sandbox/cli/commands/: __init__.py  doctor.py  generate.py  inspect.py  manual.py  probe.py  serve.py  session.py  spec.py  web.py
decoding_sandbox/core/: backend.py  config.py  engine.py  factory.py  manual.py  provider_probe.py  samplers.py  speculative.py  storage.py  types.py  usage.py
decoding_sandbox/server/: __init__.py  __main__.py  app.py  schemas.py
decoding_sandbox/web/: __init__.py  app.py  auth.py  backends.py  logs_api.py  schemas.py  sessions.py  streaming.py
decoding_sandbox/web/logging/: __init__.py  aggregator.py  db.py  masking.py  models.py  service.py  transport.py
docs/: architecture.md  eos-and-watch-tokens.md  fireworks-extensions.md
dsbx/: __init__.py
dsbx/backends/: hf.py  llamacpp.py  llamacpp_py.py  remote.py
dsbx/backends/openai_compat/: __init__.py  _constants.py  _fireworks_ext.py  _http.py  _parsing.py  _streaming.py  _streaming_echo.py  _tokenizer.py  backend.py
dsbx/cli/: __main__.py  _shared.py  app.py  manual_tui.py  render.py  session.py
dsbx/cli/commands/: doctor.py  generate.py  inspect.py  manual.py  probe.py  serve.py  session.py  spec.py  web.py
dsbx/core/: __init__.py  backend.py  config.py  engine.py  factory.py  manual.py  provider_probe.py  samplers.py  speculative.py  usage.py
dsbx/server/: __init__.py  __main__.py  app.py  schemas.py
dsbx/web/: __init__.py  app.py  backends.py  logs_api.py  schemas.py  sessions.py  streaming.py
dsbx/web/logging/: __init__.py  aggregator.py  db.py  models.py  service.py  transport.py
examples/: custom_sampler.py
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  render.ts  sse.ts  types.ts
frontend/src/lib/__tests__/: render.test.ts  sse.test.ts
frontend/src/lib/components/: BackendSelect.svelte  CapabilityBadges.svelte  ChipInput.svelte  CompletionToken.svelte  ConfidenceBar.svelte  JsonView.svelte  LogRow.svelte  ModelInput.svelte  PromptTokenPreview.svelte  RemoteModelControl.svelte  Toast.svelte  TokenComposer.svelte  TokenInline.svelte  TokenText.svelte
frontend/src/lib/stores/: auth.ts  info.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/generate/: +page.svelte
frontend/src/routes/inspect/: +page.svelte
frontend/src/routes/logs/: +page.svelte
frontend/src/routes/manual/: +page.svelte
frontend/src/routes/spec/: +page.svelte
frontend/src/routes/status/: +page.svelte
scripts/: build_llamacpp_host.sh  build_llamacpp_wind.sh  check_code_limits.py  hf_smoke.py  pre-commit  run_dsbx_server_host.sh  run_dsbx_server_wind.sh  run_llama_server_host.sh  run_llama_server_wind.sh  setup_host.sh  setup_wind.sh  smoke_fireworks_echo_stream.py  sync_to_host.sh  sync_to_wind.sh  test_manual.py
tests/: conftest.py  fakes.py  test_backends_http.py  test_cli.py  test_config.py  test_core.py  test_factory.py  test_llamacpp_py.py  test_logging_service.py  test_logging_transport.py  test_logs_api.py  test_manual_tui.py  test_masking.py  test_provider_probe.py  test_remote_backend.py  test_render.py  test_server.py  test_session.py  test_speculative.py  test_storage.py  test_timing.py  test_usage.py  test_web_auth.py  test_web_generate_stream.py  test_web_info.py  test_web_inspect.py  test_web_manual_sessions.py  test_web_models.py  test_web_remote_reload.py  test_web_spec_probe.py  test_web_special_tokens.py  web_helpers.py
