[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decoding-sandbox"
version = "0.1.0"
description = "A console sandbox to study LLM token probabilities and decoding (local models + logprob-capable providers)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mikhail Salnikov" }]

# Core deps needed everywhere (CLI + cloud backends). Local-model engines
# (torch/transformers/...) are heavy and live only on `dsbx-host`, so they are an
# optional extra installed there (see [project.optional-dependencies].local).
dependencies = [
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
    "openai>=1.40",
    "huggingface_hub>=0.24",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Installed on `dsbx-host` only (the box with the P40 GPU). Torch is installed
# separately with the CUDA 12.4 index URL (see README / scripts/setup_wind.sh).
local = [
    "transformers>=4.57",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
dsbx = "decoding_sandbox.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["decoding_sandbox*"]

[tool.ruff]
line-length = 100
target-version = "py310"
