[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decoding-sandbox"
version = "0.1.0"
description = "A console sandbox to study LLM token probabilities and decoding (local models + logprob-capable providers)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mikhail Salnikov" }]

# Core deps needed everywhere (CLI + cloud backends). Local-model engines
# (torch/transformers/...) are heavy and live only on `dsbx-host`, so they are an
# optional extra installed there (see [project.optional-dependencies].local).
dependencies = [
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
    "openai>=1.40",
    "huggingface_hub>=0.24",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Installed on `dsbx-host` only (the box with the P40 GPU). Torch is installed
# separately with the CUDA 12.4 index URL (see README / scripts/setup_wind.sh).
local = [
    "transformers>=4.57",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.2",
    # In-process llama.cpp for the white-box llamacpp-py backend (full-vocab
    # logits via Llama.scores). On dsbx-host, install with CUDA via:
    #   CMAKE_ARGS="-DGGML_CUDA=on -DCMAKE_CUDA_ARCHITECTURES=61
    #               -DCMAKE_CUDA_HOST_COMPILER=/usr/bin/g++-12" \
    #     pip install llama-cpp-python --no-binary=:all:
    # or use abetlen's prebuilt CUDA wheels:
    #   pip install llama-cpp-python \
    #     --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu124
    "numpy>=1.26",
    "llama-cpp-python>=0.3.2",
]
# Installed wherever the dsbx HTTP server (``dsbx serve``) runs. On a
# single-machine setup this is the same box as ``[local]``. We keep it a
# separate extra so the client-side install on the client stays light
# (it only needs httpx, which is already a core dep).
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# The browser-facing web middleware (``dsbx web``). Reuses the [server]
# deps but is kept as its own extra so the install/deploy story stays
# crisp: install [server] on dsbx-host for ``dsbx serve``, install [web] on
# the client for ``dsbx web``.
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    # Tests for the server endpoints + RemoteBackend round-trip need
    # FastAPI's TestClient; pull the [server] extras in for the dev env.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
dsbx = "decoding_sandbox.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["decoding_sandbox*"]

[tool.ruff]
line-length = 100
target-version = "py310"
