[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsbx"
version = "0.1.0"
description = "A console sandbox to study LLM token probabilities and decoding (local models + logprob-capable providers)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mikhail Salnikov" }]

# Core deps needed everywhere (CLI + cloud backends). Local-model engines
# (torch/transformers/...) are heavy and live only on `dsbx-host`, so they are an
# optional extra installed there (see [project.optional-dependencies].local).
dependencies = [
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
    "openai>=1.40",
    "huggingface_hub>=0.24",
    # Rust-binding HuggingFace tokenizer. Small wheel (~3-5 MB) so it's fine
    # to keep in the core deps even though only ``openai_compat`` uses it
    # directly. We need it to give cloud backends (Fireworks et al.) a real
    # local tokenizer: the API takes ``prompt: str`` and tokenizes server-
    # side, so without a local replica we can't (a) splice extra ids in
    # front via token-array prompt mode, (b) show a live token preview as
    # the user types in the Decode workbench, (c) discover the model's BOS
    # automatically. ``Tokenizer.from_file`` consumes a single
    # ``tokenizer.json`` we fetch on demand via ``hf_hub_download`` and
    # cache in the standard HF cache dir.
    "tokenizers>=0.20",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Installed on `dsbx-host` only (the box with the GPU). Torch is installed
# separately with the CUDA 12.4 index URL (see README / scripts/setup_host.sh).
local = [
    "transformers>=4.57",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.2",
    # In-process llama.cpp for the white-box llamacpp-py backend (full-vocab
    # logits via Llama.scores). On dsbx-host, install with CUDA via:
    #   CMAKE_ARGS="-DGGML_CUDA=on -DCMAKE_CUDA_ARCHITECTURES=61
    #               -DCMAKE_CUDA_HOST_COMPILER=/usr/bin/g++-12" \
    #     pip install llama-cpp-python --no-binary=:all:
    # or use abetlen's prebuilt CUDA wheels:
    #   pip install llama-cpp-python \
    #     --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu124
    "numpy>=1.26",
    "llama-cpp-python>=0.3.2",
]
# Installed wherever the dsbx HTTP server (``dsbx serve``) runs. On a
# single-machine setup this is the same box as ``[local]``. We keep it a
# separate extra so the client-side install on the client stays light
# (it only needs httpx, which is already a core dep).
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# The browser-facing web middleware (``dsbx web``). Reuses the [server]
# deps but is kept as its own extra so the install/deploy story stays
# crisp: install [server] on dsbx-host for ``dsbx serve``, install [web] on
# the client for ``dsbx web``.
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Async SQLite for the upstream-request log store. SQLAlchemy 2.x is the
    # async ORM; aiosqlite is the driver. Both pure-Python; SQLite itself
    # ships with the stdlib.
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.6",
    "mypy>=1.13",
    # Tests for the server endpoints + RemoteBackend round-trip need
    # FastAPI's TestClient; pull the [server] extras in for the dev env.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # The upstream-request log store; tests exercise its SQLAlchemy layer
    # against an in-memory aiosqlite DB.
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    # Required to run test_llamacpp_py which mocks the real GPU deps but uses numpy
    "numpy>=1.26",
]

[project.scripts]
dsbx = "dsbx.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["dsbx*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# A pragmatic superset of pyflakes/pycodestyle plus the high-signal plugin
# rule sets we care about (bugbear, pyupgrade, simplify, pathlib, datetimez,
# naming, comprehensions, type-checking, bandit, ruff-native). Kept lighter
# than a strict production gate (no forced T20/print ban project-wide).
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101", # asserts are fine (tests + internal invariants)
    "S311", # non-crypto random is intentional (sampling jitter, backoff)
    "B008", # FastAPI's `Depends()` in defaults is the idiomatic pattern
    "N812", # `import torch.nn.functional as F` and similar are conventional
]

[tool.ruff.lint.per-file-ignores]
# Tests carry long inline fixtures (E501), poke the filesystem directly
# (PTH), and define throwaway fake classes with mutable attrs (RUF012).
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "S311", "E501", "PTH", "RUF012"]
# One-off smoke scripts: prints are the point (T20), subprocess is expected
# (S603/S607), best-effort cleanup swallows errors (S110), and a couple of
# long literal lines (E501) are fine.
"scripts/**/*.py" = ["T20", "S603", "S607", "S110", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["dsbx"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
# Intentionally NOT strict yet: the ~13k-line surface needs incremental
# typing. mypy runs informationally in CI (continue-on-error) until the
# typing pass lands. Tracked as a follow-up issue.

[tool.pytest.ini_options]
# Auto-mode lets us write ``async def test_*`` without @pytest.mark.asyncio
# noise on every test. The upstream-request logging tests live entirely in
# asyncio land (SQLAlchemy async engine + queue + flush task), so this is
# the right default.
asyncio_mode = "auto"

[tool.coverage.run]
source = ["dsbx"]
branch = true
omit = [
    # Thin process entry points; exercised by integration, not unit tests.
    "dsbx/**/__main__.py",
    "dsbx/cli/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# No fail_under gate yet -- we *measure* and publish the real number in the
# README. Raising this to a hard floor is a tracked follow-up.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
